--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,124 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+
+html,
+body,
+div {
+  font-family: 'Source Sans Pro', sans-serif;
+  border: 0;
+  margin: 0;
+  padding: 0;
+}
+a{
+  color: white;
+  text-decoration: none;
+}
+
+body{
+  background-color: white;
+}
+
+a:hover, a:focus {
+  color: navy;
+  text-decoration: none;
+  outline: none;
+}
+
+[scroll] {
+  position: fixed;
+  top: 0;
+  z-index: 2;
+}
+
+.prestige-space{
+  height:25%;
+}
+
+.mat-card{
+  height: 500px;
+  width: 1000px;
+  background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
+  border-radius: 10px;
+
+
+  .mat-card-title{
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-size: 24px;
+  font-weight: 200;
+}
+  .mat-card-subtitle{
+    color: #000;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    font-size: 16px;
+    font-weight: 200;
+  }
+}
+
+
+
+.img-circle{
+  padding: 5px;
+  height: 25%;
+  width: 25%;
+
+
+}
+
+.form-field{
+  border-radius: 30px;
+  font-size: 16px;
+  font-weight: 400;
+  height: 40px;
+  text-align: center;
+  mat-icon{
+    font-size: 16px;
+    font-weight: 400;
+    color: navy;
+  }
+
+}
+
+hr{
+  background-color: gray;
+  color: gray;
+
+}
+
+router-outlet{
+  margin-top: 50px;
+}
+
+.container{
+  min-height: 100vh;
+}
+.pageview{
+    flex-direction: column;
+    min-height: 100vh;
+}
+main {
+  display: flex;
+  flex-direction: column;
+  > *:not(router-outlet) {
+    flex: 1;
+    display: block;
+  }
+}
+.router {
+  flex: 1;
+}
+
+#footer {
+  //position: absolute;
+  //bottom: 0;
+  width: 100%;
+  height: 100px;
+  background-color: #ffffff;
+  padding: 25px 0;
+  color: #555;
+  a {
+    color: #1a4843;
+    &:hover, &:focus {
+      color: #88d1cc;
+    }
+  }}
