--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,6 +4,8 @@
   <div fxLayout="row" fxLayoutGap="30px" fxLayoutAlign="center center">
     <div fxFlex="50"><a class="mat-raised-button" routerLink="../user">Employee</a> </div>
     <div fxFlex="50"><a class="mat-raised-button" routerLink="../admin">Admin</a> </div>
+    <div fxFlex="50"><a class="mat-raised-button" routerLink="../admin">hello</a> </div>
+
   </div>
   <div class="prestige-space"></div>
 </div>
