--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="login-page" fxLayout="column" fxLayoutAlign="center center">
-  <div class="prestige-space"></div>
+  <div class="prestige-space"> </div>
 
 <mat-card class="login-card">
 
@@ -44,6 +44,7 @@
             </div>
           </div>
           <div><hr></div>
+          <a routerLink="../home">home</a>
         </div>
       </div>
     </form>
