--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,2 +1,66 @@
 @import "../styles";
 
+@import url(//fonts.googleapis.com/css?family=Roboto:400,300,100,500,700);
+@import url(//fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700);
+@import url(//fonts.googleapis.com/css?family=Glegoo);
+@import url(//fonts.googleapis.com/css?family=Righteous);
+
+
+
+a {
+  text-decoration: none;
+  font-size: inherit;
+  font-weight: 400;
+  color: inherit;
+}
+
+.allwrap{
+  height: 100vh;
+  .example-spacer {
+    flex: 1 1 auto;
+  }
+
+  .syncbar{
+    background-color: white;
+    height: 100px;
+    display: flex;
+    color: #555555;
+    font-family: 'Source Sans Pro', "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin: 0;
+    padding-right: 24px;
+    padding-bottom: 1px;
+    .nav-item{
+      text-transform: uppercase;
+      color: black;
+      font-size: 14px;
+      padding: 20px;
+      &:hover{
+        border-bottom: 3px solid #0BA5DB;
+      }
+    }
+    .loginbutton {
+      font-family: 'Source Sans Pro', "Helvetica Neue", Helvetica, Arial, sans-serif;
+      background:#fff;
+      border: 2px solid #0BA5DB;
+      color: black;
+      padding: 8px 35px;
+      font-size: 12px;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+      border-radius: 4px;
+      margin-left: 5px;
+
+
+    }
+  }
+}
+
+#footer{
+    background-color: #0BA5DB;
+    color: white;
+    height: 50px;
+    font-size: 12px;
+    font-weight: 300;
+  }
+
+
