--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,19 +1,12 @@
 <div class="pageview" fxLayout="column" fxLayoutAlign="center center">
 <div class="landing" fxLayout="column" fxFlex fxLayoutAlign="center center">
-  <div class="prestige-space"></div>
   <div><img src="../../assets/images/Sync_1@2x.png"/></div>
   <div class="tag"><h1>Schedules made easy.</h1></div>
   <div class="getstarted"><button mat-raised-button>get started</button></div>
-  <div class="prestige-space"></div>
 </div>
 
-<div id="venues" fxLayout="column" fxFlex fxLayoutAlign="center center">
-  <div class="prestige-space"></div>
-  <div class="tag"><h1>used at these venues</h1></div>
-  <hr>
-  <div class="venue-container" fxLayout="row" fxLayoutGap="50px" fxLayoutAlign="center center">
-    <img src="../../assets/images/Sync_green.png">
-    <img src="../../assets/images/Sync_purp.png">
-  </div>
+
 </div>
-</div>
+<app-venues></app-venues>
+<app-about-us></app-about-us>
+
