--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,30 +1,11 @@
 @import "../../../src/styles.scss";
 
 
-.landing {
 
-  background-color: white;
-  height: 100vh;
-
-  h1 {
-    color: black;
-    font-size: 100px;
-    font-weight: 100;
-    font-family: 'Source Sans Pro', "Helvetica Neue", Helvetica, Arial, sans-serif;
-    margin: 10px
-  }
-  .mat-raised-button{
-    background-color: #0BA5DB;
-    color: white;
-    font-size: 16px;
-    font-weight: 300;
-    border-radius: 10px;
-    width: 500px;
-    text-transform: uppercase;
-    font-family: 'Source Sans Pro', "Helvetica Neue", Helvetica, Arial, sans-serif;
-    border: 1px solid #0BA5DB;
-    padding: 16px 35px;
-    margin-top: 50px;
-    letter-spacing: 2px;
-  }
+h1 {
+  color: black;
+  font-size: 76px;
+  font-weight: 100;
+  font-family: 'Dosis', sans-serif;
+  margin: 10px
 }
