--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     </span>
     <span class="example-spacer"></span>
     <div class="nav-item">
-      <a routerLink="#venues">VENUES</a>
+      <a routerLink="../home/venues/">VENUES</a>
     </div>
     <div class="nav-item">
       <a routerLink="about">ABOUT</a>
@@ -15,7 +15,7 @@
     <div class="nav-item">
       <a routerLink="contact">CONTACT</a>
     </div>
-    <a routerLink="portfolio">
+    <a routerLink="login">
       <div class="loginbutton">
       LOGIN
       </div>
