--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 <div class="landing" fxLayout="column" fxFlex fxLayoutAlign="center center">
   <div><img src="../../assets/images/Sync_1@2x.png"/></div>
   <div class="tag"><h1>Schedules made easy.</h1></div>
-  <div class="getstarted"><button mat-raised-button>get started</button></div>
+  <div class="getstarted"><a routerLink="../login"><button mat-raised-button>Get started</button></a></div>
 </div>
 
 
