--- a/src/app/home/venues/venues.component.html
+++ b/src/app/home/venues/venues.component.html
@@ -1,4 +1,4 @@
-  <div class="locations" fxLayout="column" fxFlex fxLayoutAlign="center center">
+  <div id="venues" class="locations" fxLayout="column" fxFlex fxLayoutAlign="center center">
     <div class="tag"><h1>Used at these locations</h1></div>
       <mat-grid-list [cols]="2" rowHeight="2:1">
         <mat-grid-tile><img src="../../../assets/images/212.PNG"> </mat-grid-tile>
