--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,7 +1,7 @@
 @import "../../../src/styles.scss";
 
 .login-page{
-  background-color: white;
+  background-color: #0BA5DB;
   height: 100vh;
   width: auto;
 }
@@ -11,40 +11,53 @@
   border-radius: 5px;
 }
 
-.logo-container{
-  //padding: 30px;
-  border-radius: 100%;
-  .logo-image {
-    height: auto;
-    width: 200px;
-}
-
-
-}
-
-.form{
+.form-container{
   height: 60%;
   width: 85%;
-  .input-box{
-    border: 1px solid #eeeeee;
-    border-radius: 10px;
-
-    input{
-      width: 100%;
-      color: navy;
-      font-family: Roboto, "Helvetica Neue", sans-serif;
+  .form-field{
+    border-radius: 6px;
+    font-size: 14px;
+    font-weight: 400;
+    height: 25px;
+    text-align: left;
+    width: 95%;
+    mat-icon{
       font-size: 16px;
-
+      font-weight: 400;
+      color: navy;
     }
+
   }
 }
 
-.mat-raised-button{
+.mat-raised-button.login{
   color: white;
-  background-color: #e03900;
+  font-weight: 300;
+  font-size: 12px;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: #0BA5DB;
   box-shadow: #eeeeee;
-  border-radius: 30px;
+  border-radius: 4px;
+  width: 85%;
 }
+a.cancel{
+  text-decoration: none;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  margin-top: 20px;
+  color: red;
+}
+.forgot-password{
+  text-decoration: none;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  margin-top: 20px;
+  color: #0BA5DB;
+
+}
+
 
 //.login-image{
 //  width: 500px;
