--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,34 +1,32 @@
 <div class="login-page" fxLayout="column" fxLayoutAlign="center center">
-  <div class="prestige-space"></div>
   <mat-card class="login-card">
-    <mat-card-title>
-      <div fxLayoutAlign="center center">
-        <img src="../../assets/images/sync-small@0.5x.png">
+    <div fxLayout="column" fxLayoutAlign="space-evenly" fxLayoutGap="20px" fxFlex>
+      <mat-card-title>
+        <div fxLayoutAlign="center center">
+          <img src="../../assets/images/sync-small@0.5x.png">
+        </div>
+      </mat-card-title>
+      <div  fxLayoutAlign="center center" fxLayoutGap="30px">
+        <div class="form-container" fxLayout="column" fxLayoutGap="20px">
+          <div>
+            <input class="form-field" label="email" placeholder="Email">
+          </div>
+          <div>
+            <input class="form-field" label="password" placeholder="password">
+          </div>
+        </div>
       </div>
-    </mat-card-title>
-    <div class="prestige-space"></div>
-    <div  fxLayoutAlign="center center" fxLayoutGap="30px">
-      <div class="form-container" fxLayout="column" fxLayoutGap="20px">
+      <div class="login" fxLayoutAlign="center center">
+        <button mat-raised-button >LOGIN</button>
+      </div>
+      <div class="mat-action-row" fxFlex fxLayout="column" fxLayoutAlign="space-between center" fxLayoutGap="30px">
         <div>
-          <input class="form-field" label="email" placeholder="Email">
+          <a class="forgot-password" routerLink="reset-password">Forgot Password?</a>
         </div>
         <div>
-          <input class="form-field" label="password" placeholder="password">
+          <a class="cancel" routerLink="../home">cancel</a>
         </div>
       </div>
-    </div>
-    <div class="prestige-space"></div>
-    <div fxLayoutAlign="center center">
-      <button mat-raised-button class="login">LOGIN</button>
-    </div>
-    <div fxLayout="column" fxLayoutAlign="space-around center">
-    <div>
-      <a class="forgot-password" routerLink="reset-password">Forgot Password?</a>
-    </div>
-    <div>
-      <a class="cancel" routerLink="../home">cancel</a>
-    </div>
     </div>
   </mat-card>
-  <div class="prestige-space"></div>
 </div>
