--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -3,7 +3,6 @@
 .login-page{
   background-color: #0BA5DB;
   height: 100vh;
-  width: auto;
 }
 
 .login-card {
@@ -16,11 +15,15 @@
   width: 85%;
   .form-field{
     border-radius: 6px;
-    font-size: 14px;
-    font-weight: 400;
     height: 25px;
     text-align: left;
     width: 95%;
+    color: #0BA5DB;
+    font-family:  Roboto, "Helvetica Neue", sans-serif;
+    font-size: 12px;
+    font-weight: 700;
+    text-transform: capitalize;
+    padding: 5px;
     mat-icon{
       font-size: 16px;
       font-weight: 400;
@@ -29,34 +32,34 @@
 
   }
 }
-
-.mat-raised-button.login{
-  color: white;
-  font-weight: 300;
-  font-size: 12px;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-  background-color: #0BA5DB;
-  box-shadow: #eeeeee;
-  border-radius: 4px;
-  width: 85%;
+.login {
+  margin-top: 60px;
+  .mat-raised-button {
+    color: white;
+    font-weight: 300;
+    font-size: 12px;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    background-color: #0BA5DB;
+    box-shadow: #eeeeee;
+    border-radius: 4px;
+    width: 85%;
+  }
 }
-a.cancel{
+
+.mat-action-row, a{
   text-decoration: none;
   font-family: Roboto, "Helvetica Neue", sans-serif;
   font-size: 12px;
   font-weight: 400;
-  margin-top: 20px;
-  color: red;
-}
-.forgot-password{
-  text-decoration: none;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-  font-size: 12px;
-  font-weight: 400;
-  margin-top: 20px;
-  color: #0BA5DB;
+  .cancel{
+    color: red;
+  }
+  .forgot-password{
+    color: #0BA5DB;
+  }
 
 }
+
 
 
 //.login-image{
