Added Backend: express bin/www file + app.js

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,6 +8,6 @@
 
 
 </div>
-<app-venues></app-venues>
-<app-about-us></app-about-us>
+<!--<app-venues></app-venues>-->
+<!--<app-about-us></app-about-us>-->
 
