Added Backend: express bin/www file + app.js

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="pageview" fxLayout="column" fxLayoutAlign="center center">
-<div class="landing" fxLayout="column" fxFlex fxLayoutAlign="center center" fxLayoutGap="25px">
-  <div><img src="../../assets/images/Sync_1@2x.png"/></div>
+<div class="landing" fxLayout="column" fxFlex fxLayoutAlign="space-evenly center" fxLayoutGap="25px">
+  <!--<div><img src="../../assets/images/Sync.png"/></div>-->
   <div class="tag"><h1>Schedules made easy.</h1></div>
   <app-login-bar></app-login-bar>
   <!--<div class="getstarted"><a routerLink="../login"><button mat-raised-button>Get started</button></a></div>-->
