--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,14 @@
+<!--<video autoplay muted loop id="clubVid">-->
+  <!--<source src="../../assets/videos/club.mp4" type="video/mp4">-->
+<!--</video>-->
+
 <div class="pageview" fxLayout="column" fxLayoutAlign="center center">
-<div class="landing" fxLayout="column" fxFlex fxLayoutAlign="space-evenly center" fxLayoutGap="25px">
-  <!--<div><img src="../../assets/images/Sync.png"/></div>-->
-  <div class="tag"><h1>Schedules made easy.</h1></div>
-  <app-login-bar></app-login-bar>
+<div class="landing" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="25px">
+  <div><img src="../../assets/images/Sync.png"/></div>
+  <div class="tag" fxShow="true" fxHide.lt-md><h1>Schedules made easy.</h1></div>
+  <div><app-login-bar></app-login-bar></div>
   <!--<div class="getstarted"><a routerLink="../login"><button mat-raised-button>Get started</button></a></div>-->
+
 </div>
 
 
