--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -9,3 +9,11 @@ h1 {
   font-family: 'Dosis', sans-serif;
   margin: 10px
 }
+
+#clubVid {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
