--- a/src/app/login/login-bar/login-bar.component.html
+++ b/src/app/login/login-bar/login-bar.component.html
@@ -1,15 +1,18 @@
-<div class="login-bar" fxLayout="row" fxLayoutGap="25px" fxLayoutAlign="space-evenly center">
-  <div fxFlex="40">
-    <input class="form-field" label="email" placeholder="Email">
-  </div>
-  <div fxFlex="40">
-    <input class="form-field" label="password" placeholder="password">
-  </div>
-  <div>
-    <button mat-raised-button>LOGIN</button>
-  </div>
-    <div fxFlex="20">
-      <a class="forgot-password" routerLink="reset-password">Forgot Password?</a>
+<div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="20px">
+  <form (submit)="onLoginSubmit()" class="example-form" fxLayoutGap="20px">
+    <div class="login-bar" fxLayout="row" fxLayoutGap="25px" fxLayoutAlign="center center" fxLayout.lt-md ="column">
+      <mat-form-field fxFlex="40">
+    <input matInput type="text" [(ngModel)]="username" [ngModelOptions]="{standalone: true}" placeholder="Username" required="required">
+  </mat-form-field>
+      <mat-form-field fxFlex="40">
+    <input matInput type="password" [(ngModel)]="password" [ngModelOptions]="{standalone: true}" placeholder="Password" required="required">
+  </mat-form-field>
+      <div>
+        <button mat-raised-button type="submit" value="login">LOGIN</button>
+      </div>
+      <div fxFlex="20">
+        <a class="forgot-password" routerLink="reset-password">Forgot Password?</a>
+      </div>
     </div>
+  </form>
 </div>
-
