--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,32 +1,20 @@
 <div class="login-page" fxLayout="column" fxLayoutAlign="center center">
   <mat-card class="login-card">
     <div fxLayout="column" fxLayoutAlign="space-evenly" fxLayoutGap="20px" fxFlex>
-      <mat-card-title>
-        <div fxLayoutAlign="center center">
-          <img src="../../assets/images/sync-small@0.5x.png">
-        </div>
-      </mat-card-title>
-      <div  fxLayoutAlign="center center" fxLayoutGap="30px">
-        <div class="form-container" fxLayout="column" fxLayoutGap="20px">
-          <div>
-            <input class="form-field" label="email" placeholder="Email">
-          </div>
-          <div>
-            <input class="form-field" label="password" placeholder="password">
-          </div>
-        </div>
-      </div>
-      <div class="login" fxLayoutAlign="center center">
-        <button mat-raised-button >LOGIN</button>
-      </div>
-      <div class="mat-action-row" fxFlex fxLayout="column" fxLayoutAlign="space-between center" fxLayoutGap="30px">
-        <div>
-          <a class="forgot-password" routerLink="reset-password">Forgot Password?</a>
-        </div>
-        <div>
-          <a class="cancel" routerLink="../home">cancel</a>
-        </div>
-      </div>
-    </div>
-  </mat-card>
+      <mat-card-header><h1>Login</h1></mat-card-header>
+
+      <form (submit)="onLoginSubmit()" fxLayout="column" fxLayoutAlign="center center" class="example-form" fxLayoutGap="20px">
+            <mat-form-field fxFlex="40">
+              <input matInput type="text" [(ngModel)]="username" [ngModelOptions]="{standalone: true}" placeholder="Username" required="required">
+            </mat-form-field>
+            <mat-form-field fxFlex="40">
+              <input matInput type="password" [(ngModel)]="password" [ngModelOptions]="{standalone: true}" placeholder="Password" required="required">
+            </mat-form-field>
+            <div>
+              <button mat-raised-button type="submit" value="login">LOGIN</button>
+            </div>
+            <div fxFlex="20">
+              <a class="forgot-password" routerLink="reset-password">Forgot Password?</a>
+            </div>
+        </form>
 </div>
