--- a/src/app/portal/user/user.component.html
+++ b/src/app/portal/user/user.component.html
@@ -1,48 +1,18 @@
-<div class="pageview">
-<div class="portal" fxLayout="row" fxFlex>
-  <div fxFlex="50" class="sidemenu">
-    <mat-list>
-      <mat-list-item><a routerLink="../home">Home</a></mat-list-item>
-      <hr>
-      <mat-list-item><a routerLink="../admin">Admin</a></mat-list-item>
-      <mat-list-item><a routerLink="../login">Login</a></mat-list-item>
-    </mat-list>
+<div fxLayout="row" fxLayoutGap="30px">
+  <div fxLayout="column" fxFlex="40" fxLayoutGap="30px">
+    <div>
+      hello
+    </div>
+    <div>
+      world
+    </div>
   </div>
-  <div class="calendar" fxFlex="50">
-    <mat-grid-list cols="7" rowHeight="2:1">
-      <mat-grid-tile>1</mat-grid-tile>
-      <mat-grid-tile>2</mat-grid-tile>
-    <mat-grid-tile>3</mat-grid-tile>
-    <mat-grid-tile>4</mat-grid-tile>
-    <mat-grid-tile>5</mat-grid-tile>
-    <mat-grid-tile>6</mat-grid-tile>
-    <mat-grid-tile>7</mat-grid-tile>
-    <mat-grid-tile>8</mat-grid-tile>
-    <mat-grid-tile>9</mat-grid-tile>
-    <mat-grid-tile>10</mat-grid-tile>
-    <mat-grid-tile>11</mat-grid-tile>
-    <mat-grid-tile>12</mat-grid-tile>
-    <mat-grid-tile>13</mat-grid-tile>
-    <mat-grid-tile>14</mat-grid-tile>
-    <mat-grid-tile>15</mat-grid-tile>
-    <mat-grid-tile>16</mat-grid-tile>
-    <mat-grid-tile>17</mat-grid-tile>
-    <mat-grid-tile>18</mat-grid-tile>
-    <mat-grid-tile>19</mat-grid-tile>
-    <mat-grid-tile>20</mat-grid-tile>
-    <mat-grid-tile>21</mat-grid-tile>
-    <mat-grid-tile>22</mat-grid-tile>
-    <mat-grid-tile>23</mat-grid-tile>
-    <mat-grid-tile>24</mat-grid-tile>
-    <mat-grid-tile>25</mat-grid-tile>
-    <mat-grid-tile>26</mat-grid-tile>
-    <mat-grid-tile>27</mat-grid-tile>
-    <mat-grid-tile>28</mat-grid-tile>
-    <mat-grid-tile>29</mat-grid-tile>
-    <mat-grid-tile>30</mat-grid-tile>
-    <mat-grid-tile>31</mat-grid-tile>
-
-  </mat-grid-list>
-</div>
-</div>
+  <div fxLayout="column" fxFlex="60" fxLayoutGap="30px">
+    <div>
+      second
+    </div>
+    <div>
+      column
+    </div>
+  </div>
 </div>
