--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,6 +32,11 @@ body{
   background: white;
   border-radius: 5px;
 
+  .mat-card-header{
+    font-size: 16px;
+    font-family: Righteous, sans-serif;
+    color: #0BA5DB;
+  }
 
   .mat-card-title{
     font-family: Roboto, "Helvetica Neue", sans-serif;
@@ -138,7 +143,7 @@ main {
   font-family:  Roboto, "Helvetica Neue", sans-serif;
   font-size: 12px;
   font-weight: 700;
-  text-transform: capitalize;
+  text-transform: none;
   padding: 5px;
   mat-icon{
     font-size: 16px;
@@ -161,3 +166,34 @@ main {
   }
 
 }
+
+.login-page{
+  background-color: #0BA5DB;
+  height: 100vh;
+}
+
+.login-card {
+  width: 400px;
+  border-radius: 5px;
+}
+
+.form-container{
+  height: 60%;
+  width: 85%;
+
+}
+.login {
+  margin-top: 60px;
+  .mat-raised-button {
+    color: white;
+    font-weight: 300;
+    font-size: 12px;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    background-color: #0BA5DB;
+    box-shadow: #eeeeee;
+    border-radius: 4px;
+    width: 85%;
+  }
+}
+
+
