--- a/src/app/portal/admin/admin.component.html
+++ b/src/app/portal/admin/admin.component.html
@@ -4,7 +4,8 @@
   <a routerLink="../home"> <mat-icon color="warm">home</mat-icon></a>
   </div>
   <div>
-    Admin
+    <h1 class="mat-headline">Admin</h1>
   </div>
+  <button mat-raised-button>Add DJ</button>
 </div>
 <div class="prestige-space"></div>
