--- a/src/app/portal/admin/admin.component.html
+++ b/src/app/portal/admin/admin.component.html
@@ -1,11 +1,3 @@
-<div class="prestige-space"></div>
-<div class="mat-card" fxFlex fxLayout="row">
-  <div>
-  <a routerLink="../home"> <mat-icon color="warm">home</mat-icon></a>
-  </div>
-  <div>
-    <h1 class="mat-headline">Admin</h1>
-  </div>
-  <button mat-raised-button>Add DJ</button>
-</div>
-<div class="prestige-space"></div>
+<mat-tab-group>
+  <mat-tab label="USERS"><app-employees></app-employees></mat-tab>
+</mat-tab-group>
