--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -3,5 +3,9 @@
   <ul class="list-group">
     <li class="mat-list-itemm">Username: {{user.username}}</li>
     <li class="mat-list-item">Email: {{user.email}}</li>
+    <li class="mat-list-item">Role: {{user.role}}</li>
+    <li class="mat-list-item">Password: {{user.password}}</li>
+    <li class="mat-list-item">Last Name: {{user.last}}</li>
+
   </ul>
 </div>
