--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,32 @@
-<div class="allwrap">
-  <app-navbar></app-navbar>
-  <router-outlet></router-outlet>
-  <mat-toolbar id="footer" fxLayoutGap="20px" fxLayoutAlign="center center">
-    <span fxLayout="row" fxLayoutAlign="space-around center" fxLayoutGap="10px">
-      <i class="fa fa-copyright" fxShow="true" fxHide.lt-md></i>
-      <span fxShow="true" fxHide.lt-md>Sync Scheduling, Inc.</span>
-    </span>
-    <!--<span class="example-spacer" fxShow="true" fxHide.lt-md></span>-->
-    <div class="signup-prompt" fxLayoutAlign="space-around"><a style="color: white;" routerLink="../../register"><b>Need an admin account? Contact Us  </b></a></div>
+<!--<mat-sidenav-container class="example-container">-->
+  <!--<mat-sidenav #sidenav mode="side" opened="true" class="app-sidenav" fxLayout="column"-->
+               <!--[fixedInViewport]="true">-->
+    <!--<div class="sidenav-container" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="20">-->
+      <!--<div class="nav-item" *ngIf="authService.loggedIn()" fxLayout="column" fxLayoutAlign="center center">-->
+        <!--<div>-->
+          <!--<mat-icon>home</mat-icon>-->
+        <!--</div>-->
+        <!--<div>-->
+          <!--<a routerLink="../portal">home</a>-->
+        <!--</div>-->
+      <!--</div>-->
+      <!--<div class="nav-item" *ngIf="authService.loggedIn()">-->
+        <!--<div>-->
+          <!--<mat-icon>account_cirlce</mat-icon>-->
+        <!--</div>-->
+        <!--<a routerLink="../profile">profile</a>-->
+      <!--</div>-->
+      <!--<a href="" (click)="onLogoutClick()">-->
+        <!--<div class="loginbutton" *ngIf="authService.loggedIn()">-->
+          <!--Logout-->
+        <!--</div>-->
+      <!--</a>-->
+    <!--</div>-->
 
+  <!--</mat-sidenav>-->
 
-  </mat-toolbar>
-</div>
+  <!--<mat-sidenav-content>-->
+<app-navbar></app-navbar>
+   <router-outlet></router-outlet>
+  <!--</mat-sidenav-content>-->
+<!--</mat-sidenav-container>-->
