--- a/src/app/portal/admin/admin.component.scss
+++ b/src/app/portal/admin/admin.component.scss
@@ -6,3 +6,9 @@ pre {
   background-color: #f5f5f5;
   padding: 15px;
 }
+
+.mat-tab-label-content{
+  font-size: 18px;
+  background-color: #0BA5DB;
+}
+
